# cityfarm

./: .gitignore  .session-handoff.md  CLAUDE.md
.claude/agents/: backend-developer.md  frontend-developer.md  rpi-engineer.md  yolo-developer.md
.github/workflows/: auto-project.yml  dispatch.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
CityFarm/: Glossary.md  Home.md  IoT-маппинг-CityFarm.md
CityFarm/.obsidian/: community-plugins.json  core-plugins.json  graph.json  workspace.json
CityFarm/01-Основы/: 01-MOC.md  Вертикальные-фермы.md  Контролируемые-параметры-среды.md  Поступление-минеральных-солей-через-корни.md  Преимущества-сити-фермерства.md  Что-такое-сити-фермерство.md  Экономическая-эффективность-сити-ферм.md
CityFarm/02-Системы-выращивания/: 02-MOC.md  NFT-техника-питательного-слоя.md  Аэропоника.md  Гидропоника-определение-и-методы.md  Глубоководная-система-DWC.md  Капельный-полив.md  Периодическое-затопление-Ebb-and-Flow.md  (+1 more)
backend/: go.mod
firmware/: Cargo.toml  go.mod
firmware/src/: calibration.rs  config.rs  main.rs  scheduler.rs
firmware/src/actuators/: relay.rs
firmware/src/sensors/: ads1115.rs  bh1750.rs  dht22.rs  ds18b20.rs  mod.rs  moisture.rs  ph.rs  tds.rs
firmware/src/transport/: buffer.rs  http.rs
frontend/: index.html  package-lock.json  package.json
ml/: pyproject.toml
ml/data/: datasets.yaml
(+184 files in other folders)
