[package]
name = "cityfarm-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = "0.19"
linux-embedded-hal = "0.4"
ads1x1x = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
toml = "0.8"
embedded-hal = "1.0"
